--- a/level-1/css/custom.css
+++ b/level-1/css/custom.css
@@ -1,17 +1,6 @@
-/* Variables */
+/* Global*/
 :root {
     font-size: 62.5%;
-    --lightColor: #F0F0F0;
-    --blackColor: #121212;
-    --primaryColor: #E4C1AE;
-    --secondaryColor: #FFFFFF;
-    --hoverColor: #e6a17c;
-}
-/* Fonts properties */
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap');
-h1, p {
-    font-family: 'Roboto', sans-serif;
-    color: var(--blackColor);
 }
 /* Reset margin and padding */
 .container, .col {
@@ -22,37 +11,44 @@ h1, p {
 }
 /* Layout properties */
 body {
-    background-color: var(--lightColor);
+    font-family: 'Roboto', sans-serif;
+    background-color: #F0F0F0;
 }
 .container {
     margin-top: 10rem;
 }
+.h1, p {
+    color: #121212;
+}
 .sea {
     height: 40.8rem;
-    background-color: var(--secondaryColor);
+    background-color: #FFFFFF;
 }
 .sea .img-container {
     height: 40.8rem;
-    overflow: hidden;
 }
 .sea img {
     height: 100%;
     width: 100%;
+    object-fit: cover;
 }
 .description-container {
+    border-top: 1px solid #F0F0F0;
+}
+.text-container {
     width: 35rem;
 }
-.description-container p {
+.text-container p {
     font-size: 1.6rem;
-    line-height: calc(7.7rem/3);
-    padding-bottom: 3.5rem;
+    line-height: 2.6rem;
+    padding-bottom: 3.65rem;
 }
-.description-container .h1 {
+.text-container .h1 {
     font-size: 4.2rem;
     font-weight: 700;
-    line-height: 5rem;
+    line-height: 4.9rem;
     padding-top: 8.6rem;
-    padding-bottom: 4.3rem;
+    padding-bottom: 4.1rem;
 }
 .btn {
     width: 13.5rem;
@@ -60,11 +56,12 @@ body {
     border-radius: 4.4rem;
     font-size: 1.6rem;
     font-weight: 700;
-    background-color: var(--primaryColor);
-    color: var(--secondaryColor);
+    line-height: 2.5rem;
+    background-color: #E4C1AE;
+    color: #FFFFFF;
 }
 .btn:hover {
-    background-color: var(--hoverColor);
+    background-color: #e6a17c;
 }
 /* Media Queries */
 @media (max-width: 767px) {
@@ -73,10 +70,6 @@ body {
    }
     .sea .img-container {
         max-height: 50%;
-   }
-    .sea img {
-        width: 100%;
-        object-fit: cover;
    }
 }
 @media (max-width: 640px) {
